package com.groupjn.orderservice.builder;

public interface IEmail {
    void send();
}
